Create CRUDRepository template & begin debugcommand update